<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter an email address"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q1_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/edit_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/QuestionHead"
                    android:text="@string/Q1Head" />

                <TextView
                    style="@style/Question"
                    android:text="@string/Q1" />

            </LinearLayout>

            <RadioGroup style="@style/Answer">

                <RadioButton
                    android:id="@+id/radio_A1"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA1"
                    android:text="@string/A1" />

                <RadioButton
                    android:id="@+id/radio_A2"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA1"
                    android:text="@string/A2" />

                <RadioButton
                    android:id="@+id/radio_A3"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA1"
                    android:text="@string/A3" />

                <RadioButton
                    android:id="@+id/radio_A4"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA1"
                    android:text="@string/A4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q2_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Q1_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/QuestionHead"
                    android:text="@string/Q2Head" />

                <TextView
                    style="@style/Question"
                    android:text="@string/Q2" />

            </LinearLayout>

            <RadioGroup style="@style/Answer">

                <RadioButton
                    android:id="@+id/radio_A2_1"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA2"
                    android:text="@string/A2_1" />

                <RadioButton
                    android:id="@+id/radio_A2_2"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA2"
                    android:text="@string/A2_2" />

                <RadioButton
                    android:id="@+id/radio_A2_3"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA2"
                    android:text="@string/A2_3" />

                <RadioButton
                    android:id="@+id/radio_A2_4"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA2"
                    android:text="@string/A2_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q3_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Q2_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/QuestionHead"
                    android:text="@string/Q3Head" />

                <TextView
                    style="@style/Question"
                    android:text="@string/Q3" />

            </LinearLayout>

            <RadioGroup style="@style/Answer">

                <RadioButton
                    android:id="@+id/radio_A3_1"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA3"
                    android:text="@string/A3_1" />

                <RadioButton
                    android:id="@+id/radio_A3_2"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA3"
                    android:text="@string/A3_2" />

                <RadioButton
                    android:id="@+id/radio_A3_3"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA3"
                    android:text="@string/A3_3" />

                <RadioButton
                    android:id="@+id/radio_A3_4"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA3"
                    android:text="@string/A3_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Q4_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Q3_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/QuestionHead"
                    android:text="@string/Q4Head" />

                <TextView
                    style="@style/Question"
                    android:text="@string/Q4" />

            </LinearLayout>

            <RadioGroup style="@style/Answer">

                <RadioButton
                    android:id="@+id/radio_A4_1"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA4"
                    android:text="@string/A4_1" />

                <RadioButton
                    android:id="@+id/radio_A4_2"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA4"
                    android:text="@string/A4_2" />

                <RadioButton
                    android:id="@+id/radio_A4_3"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA4"
                    android:text="@string/A4_3" />

                <RadioButton
                    android:id="@+id/radio_A4_4"
                    style="@style/Answer"
                    android:onClick="onRadioButtonClickedA4"
                    android:text="@string/A4_4" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_below="@+id/Q4_layout"
            style="@style/button_layout">

            <Button
                android:id="@+id/result_button"
                style="@style/button"
                android:onClick="onClickSubmitButton"
                android:text="@string/submit" />

            <Button
                android:id="@+id/reset_button"
                style="@style/button"
                android:onClick="onClickResetButton"
                android:text="@string/reset" />

            <Button
                android:id="@+id/email_button"
                style="@style/button"
                android:onClick="onClickEmailButton"
                android:text="@string/email" />


        </LinearLayout>


    </RelativeLayout>


</ScrollView>